fix: correction of the FreightInCurseOptions component overlapping the modals

--- a/src/components/FreightInCourseOptions/FreightInCourseOptions.module.css
+++ b/src/components/FreightInCourseOptions/FreightInCourseOptions.module.css
@@ -16,7 +16,6 @@
   cursor: pointer;
   transition: transform 0.3s ease-in-out;
   position: relative;
-  z-index: 1;
 }
 
 .iconContainer:hover {
